# agate-dbf

./: .travis.yml  CHANGELOG.rst  MANIFEST.in  README.rst  example.py  pyproject.toml  requirements-py2.txt  requirements-py3.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
agatedbf/: __init__.py  table.py
docs/: Makefile  conf.py  index.rst
tests/: test_table.py
